# CPPM_B-Lesson8

./: .gitignore
Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Task2/: CMakeLists.txt
Task2/src/: CMakeLists.txt  equilateraltriangle.cpp  equilateraltriangle.h  exept.cpp  exept.h  figure.cpp  figure.h  isoscelestriangle.cpp  isoscelestriangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrilateral.cpp  quadrilateral.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  righttriangle.cpp  righttriangle.h  square.cpp  square.h  triangle.cpp  triangle.h
