add_executable(main 
main.cpp 
figure.cpp 
rectangle.cpp 
square.cpp 
parallelogram.cpp 
rhomb.cpp 
equilateraltriangle.cpp 
triangle.cpp 
quadrilateral.cpp 
righttriangle.cpp 
isoscelestriangle.cpp
exept.cpp
equilateraltriangle.h
figure.h
isoscelestriangle.h
parallelogram.h
quadrilateral.h
rectangle.h
rhomb.h
righttriangle.h
square.h
triangle.h
exept.h
)
